# file-share

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
assets/themes/: dark.txt  light.txt
dependencies/: CMakeLists.txt
include/: Application.hpp  Debug.hpp  DeviceList.hpp  FileShareVersion.hpp.in  LanDiscovery.hpp  ThemeManager.hpp
include/Components/: Button.hpp  Foldout.hpp  InputFileDialog.hpp  List.hpp  ListMenu.hpp
include/DeviceList/: Controller.hpp  Model.hpp  View.hpp
include/Settings/: Controller.hpp  Model.hpp  View.hpp
include/Sockets/: Address.hpp  IPv4.hpp  Socket.hpp
lib/libfsp/: CMakeLists.txt
lib/libfsp/include/FileShareProtocol/: Protocol.hpp  Version.hpp.in
lib/libfsp/source/: test.cpp
source/: Application.cpp  Debug.cpp  DeviceList.cpp  ThemeManager.cpp  main.cpp
source/Components/: Button.cpp  Foldout.cpp  InputFileDialog.cpp  List.cpp  ListMenu.cpp
source/DeviceList/: Controller.cpp  Model.cpp  View.cpp
source/Settings/: Controller.cpp  Model.cpp  View.cpp
source/Sockets/: Address.cpp  IPv4.cpp  Socket.cpp
source/cli/: arguments.cpp  interactive.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt
tests/Sockets/: TestSockets.cpp
